--- a/formulario/html_css/form.html
+++ b/formulario/html_css/form.html
@@ -12,6 +12,7 @@
         <input type="text" id="nombre" name="nombre">
         <br>
         <button type="submit">Agregar</button>
+        <a href="/listado/html_css/index.html"><button type="button">Listado-HTML</button></a>
     </form>
 </body>
 </html>
