--- a/listado/html_css/index.html
+++ b/listado/html_css/index.html
@@ -10,18 +10,21 @@
     <h1>Listado de Música</h1>
 <nav>
     <ul>
-        <li><a href="/formulario/html_css/form.html">Formulario</a></li>
+        <li><a href="/formulario/html_css/form.html">Formulario HTML</a></li>
+        <li><a href="/formulario/bootstrap/formBoost.html">Formulario-Bootstrap</a></li>
+        <li><a href="/formulario/tailwindcss/tailForm.html">Formulario-Tailwind</a></li>
+        <li><a href="/listado/bootstrap/boostlist.html">Listado-Bootstrap</a></li>
+        <li><a href="/listado/html_css/index.html">Listado-HTML</a></li>
+        <li><a href="/listado/tailwindcss/tailList.html">Listado-Tailwind</a></li>
+
     </ul>
 </nav>
 <ul id="segunda-lista">
     <li>Greatest Hits</li>
-    <li>Gypsy band</li>
-    <li>Greatest Hits</li>
-    <li>Gypsy band</li>
-    <li>Greatest Hits</li>
-    <li>Gypsy band</li>
-    <li>Greatest Hits</li>
-    <li>Gypsy band</li>
+    <li>Red hot chili peppers</li>
+    <li>Pearl Jam</li>
+    <li>Miles David</li>
+    <li>Chet Baker</li>
 </ul>
 
 </body>
