cambios finales para deploy

--- a/formulario/bootstrap/formBoost.html
+++ b/formulario/bootstrap/formBoost.html
@@ -33,7 +33,7 @@
     </form>
     <div class="container w-25">
         <div class="row justify-content-center">
-            <a href="/listado/bootstrap/boostlist.html" class="btn btn-primary">Listado-Bootstrap</a>
+            <a href="../../listado/bootstrap/boostlist.html" class="btn btn-primary">Listado-Bootstrap</a>
         </div>
     </div>
 </body>
