--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Best Songs</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Listado de Música</h1>
+    <h1>Listado de de webs</h1>
 <nav>
     <ul>
         <li><a href="../../formulario/html_css/form.html">Formulario HTML</a></li>
@@ -19,13 +18,6 @@
 
     </ul>
 </nav>
-<ul id="segunda-lista">
-    <li>Greatest Hits</li>
-    <li>Red hot chili peppers</li>
-    <li>Pearl Jam</li>
-    <li>Miles David</li>
-    <li>Chet Baker</li>
-</ul>
 
 </body>
 </html>
