--- a/formulario/tailwindcss/tailForm.html
+++ b/formulario/tailwindcss/tailForm.html
@@ -27,7 +27,7 @@
         <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
           Sign In
         </button>
-        <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="/listado/tailwindcss/tailList.html">
+        <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="../../listado/tailwindcss/tailList.html">
           Ir a listado
         </a>
       </div>
