--- a/listado/bootstrap/boostlist.html
+++ b/listado/bootstrap/boostlist.html
@@ -31,12 +31,12 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
         <div class="navbar-nav mx-auto">
-            <a class="nav-link justify-between" href="/listado/bootstrap/boostlist.html">Listado-Boostrap</a>
-            <a class="nav-link" href="/listado/html_css/index.html">Listado-HTML</a>
-            <a class="nav-link" href="/listado/tailwindcss/tailList.html">Listado-Tailwind</a>
-            <a class="nav-link" href="/formulario/html_css/form.html">Formulario-HTML</a>
-            <a class="nav-link" href="/formulario/bootstrap/formBoost.html">Formulario-Boostrap</a>
-            <a class="nav-link" href="/formulario/tailwindcss/tailForm.html">Formulario-Tailwind</a>
+            <a class="nav-link justify-between" href="../../listado/bootstrap/boostlist.html">Listado-Boostrap</a>
+            <a class="nav-link" href="../../listado/html_css/index.html">Listado-HTML</a>
+            <a class="nav-link" href="../../listado/tailwindcss/tailList.html">Listado-Tailwind</a>
+            <a class="nav-link" href="../../formulario/html_css/form.html">Formulario-HTML</a>
+            <a class="nav-link" href="../../formulario/bootstrap/formBoost.html">Formulario-Boostrap</a>
+            <a class="nav-link" href="../../formulario/tailwindcss/tailForm.html">Formulario-Tailwind</a>
         </div>
     </div>
 </nav>
