--- a/listado/tailwindcss/tailList.html
+++ b/listado/tailwindcss/tailList.html
@@ -32,12 +32,12 @@
               <div class="hidden sm:ml-6 sm:block">
                 <div class="flex space-x-4">
                   <a href="#" class="text-white px-3 py-2 rounded-md text-sm font-medium">Inicio</a>
-                    <a href="/listado/bootstrap/boostlist.html" class="text-white px-3 py-2 rounded-md text-sm font-medium">Listado-Boostrap</a>
-                    <a href="/listado/html_css/index.html" class="text-white px-3 py-2 rounded-md text-sm font-medium">Listado-HTML</a>
-                    <a href="/listado/tailwindcss/tailList.html" class="text-white px-3 py-2 rounded-md text-sm font-medium">Listado-Tailwind</a>
-                    <a href="/formulario/html_css/form.html" class="text-white px-3 py-2 rounded-md text-sm font-medium">Formulario-HTML</a>
-                    <a href="/formulario/bootstrap/formBoost.html" class="text-white px-3 py-2 rounded-md text-sm font-medium">Formulario-Boostrap</a>
-                    <a href="/formulario/tailwindcss/tailForm.html" class="text-white px-3 py-2 rounded-md text-sm font-medium">Formulario-Tailwind</a>
+                    <a href="../../listado/bootstrap/boostlist.html" class="text-white px-3 py-2 rounded-md text-sm font-medium">Listado-Boostrap</a>
+                    <a href="../../listado/html_css/index.html" class="text-white px-3 py-2 rounded-md text-sm font-medium">Listado-HTML</a>
+                    <a href="../../listado/tailwindcss/tailList.html" class="text-white px-3 py-2 rounded-md text-sm font-medium">Listado-Tailwind</a>
+                    <a href="../../formulario/html_css/form.html" class="text-white px-3 py-2 rounded-md text-sm font-medium">Formulario-HTML</a>
+                    <a href="../../formulario/bootstrap/formBoost.html" class="text-white px-3 py-2 rounded-md text-sm font-medium">Formulario-Boostrap</a>
+                    <a href="../../formulario/tailwindcss/tailForm.html" class="text-white px-3 py-2 rounded-md text-sm font-medium">Formulario-Tailwind</a>
                 </div>
               </div>
             </div>
