--- a/listado/tailwindcss/tailList.html
+++ b/listado/tailwindcss/tailList.html
@@ -38,12 +38,12 @@
 
     <div class="sm:hidden" id="mobile-menu">
       <div class="space-y-1 px-2 pb-3 pt-2">
-        <a href="/listado/bootstrap/boostlist.html" class="text-white px-3 py-2 rounded-md text-sm font-medium block">Listado-Boostrap</a>
-        <a href="../../listado/html_css/index.html" class="text-white px-3 py-2 rounded-md text-sm font-medium block">Listado-HTML</a>
-        <a href="../../listado/tailwindcss/tailist.html" class="text-white px-3 py-2 rounded-md text-sm font-medium block">Listado-Tailwind</a>
-        <a href="../../formulario/html_css/form.html" class="text-white px-3 py-2 rounded-md text-sm font-medium block">Formulario-HTML</a>
-        <a href="../../formulario/bootstrap/formBoost.html" class="text-white px-3 py-2 rounded-md text-sm font-medium block">Formulario-Boostrap</a>
-        <a href="../../formulario/tailwindcss/tail.html" class="text-white px-3 py-2 rounded-md text-sm font-medium block">Formulario-Tailwind</a>
+        <a href="../../listado/bootstrap/boostlist.html" class="text-white px-3 py-2 rounded-md text-sm font-medium block">Listado-Boostrap</a>
+              <a href="../../listado/html_css/index.html" class="text-white px-3 py-2 rounded-md text-sm font-medium block">Listado-HTML</a>
+              <a href="#" class="text-white px-3 py-2 rounded-md text-sm font-medium block">Listado-Tailwind</a>
+              <a href="../../formulario/html_css/form.html" class="text-white px-3 py-2 rounded-md text-sm font-medium block">Formulario-HTML</a>
+              <a href="../../formulario/bootstrap/formBoost.html" class="text-white px-3 py-2 rounded-md text-sm font-medium block">Formulario-Boostrap</a>
+              <a href="../../formulario/tailwindcss/tailForm.html" class="text-white px-3 py-2 rounded-md text-sm font-medium block">Formulario-Tailwind</a>
       </div>
     </div>
 </nav>
